source/styles/global/_shame.scss
.rsvp-button {
  text-decoration: none;
  border-radius: .5em;
  display: block;
  font-family: 'Comfortaa', serif;
  font-weight: 700;
  font-size: 1.25em;
  display: inline-block;
  color: #333;
  animation: bkgd 10s linear infinite;
  padding: .7em .4em;
  position: relative;

  span {
    border-radius: .3em;
    background: white;
    padding: .5em 1.7em;
    transition: all .25s;
  }

  &:hover {
    span {
      background-color: transparent;
      color: white;
    }
  }
}

.error {
  margin: 0;
  font-size: .8em;
  color: red;
}

.awesomplete {
  display: block;
  position: relative;
  margin-top: .5em;

  .visually-hidden {
    position: absolute;
    clip: rect(0, 0, 0, 0);
  }

  mark {
    background-color: palette(yellow);
  }

  > ul {
    background: #fff;
    border: 1px solid rgba(0,0,0,.3);
    border-radius: .3em;
    box-sizing: border-box;
    box-shadow: .05em .2em .6em rgba(0,0,0,.2);
    position: absolute;
    left: 0;
    min-width: 100%;
    list-style: none;
    padding: 0;
    margin: .2em 0 0;
    text-shadow: none;
    z-index: 1;

    &:empty {
      display: none;
    }

    &::before {
      content: "";
      position: absolute;
      top: -.43em;
      left: 1em;
      width: 0; height: 0;
      padding: .4em;
      background: white;
      border: inherit;
      border-right: 0;
      border-bottom: 0;
      -webkit-transform: rotate(45deg);
      transform: rotate(45deg);
    }

    > li {
      position: relative;
      padding: .2em .5em;
      cursor: pointer;
      margin: 0;

      &:first-child {
        border-top-left-radius: .3em;
        border-top-right-radius: .3em;
      }

      &:last-child {
        border-bottom-left-radius: .3em;
        border-bottom-right-radius: .3em;
      }

      &:hover {
        background: palette(teal);
        color: white;
      }

      &[aria-selected=true] {
        background: palette(blue);
        color: white;

        mark {
          background: darken(palette(yellow), 10%);
          color: inherit;
        }
      }
    }
  }
}

@supports (transform: scale(0)) {
  .awesomplete > ul {
    transition: .3s cubic-bezier(.4,.2,.5,1.4);
    transform-origin: 1.43em -.43em;

    &[hidden], &:empty {
      opacity: 0;
      transform: scale(0);
      display: block;
      transition-timing-function: ease;
    }
  }
}

#rsvp {
  background: white;
  padding: 1em 1em 1.5em 1em;
  margin: 0 auto;
  max-width: 900px;
}

.index-page {
  margin-bottom: 10em;

  h1 {
    font-size: 9vw;
    padding-bottom: 0;
  }

  @include breakpoint($two) {
    width: 66.6666%;
    margin-left: auto;

    h1 {
      font-size: 7vw;
    }
  }
}

.rsvp-page {
  min-height: 100vh;
  padding-bottom: 5em;
  animation: bkgd 30s linear infinite;

  h1 {
    color: white;
    margin: 0 auto;
    max-width: 900px;
  }
}

fieldset {
  border: none;
  padding: 0;
  border: 0;
  transition: font-size .25s;

  + fieldset {
    margin: 2em 0 0 0;
  }
}

legend {
  padding: 0;
  margin: 0;
}

.bigger { font-size: 1.5em; }

.hidden {
  font-size: 0;
  height: 0;
  opacity: 0;


  &.is-not-hidden {
    font-size: 1em;
    height: auto;
    opacity: 1;
  }
}

#family_name {
  border: none;
  border-bottom: 1px solid #333;
  width: 100%;
  display: block;
  font-size: 1em;
  color: #333;

  &::-webkit-calendar-picker-indicator {
    display: none;
  }
}

#rsvp-submit {
  border: none;
  background: white;
  float: right;
  margin-top: 2.5em;
  margin-right: -1em;
  padding: .5em 2em;
  display: flex;
  align-items: center;

  &::after:not([disabled]) {
    content: '→';
    display: inline;
    transition: font-size .25s;
    font-size: 0;
    margin-left: .25em;
  }

  &:hover {
    &::after {
      font-size: 1em;
    }
  }

  &[disabled] {
    &::after {
      content: '';
      display: inline;
      width: 1em;
      height: 1em;
      border-radius: 50%;
      border: .2em solid #333;
      border-top-color: transparent;
      margin-left: .25em;
      animation: rotate 1s infinite linear;
    }
  }
}

[type=radio] {
  opacity: 0;
  position: absolute;
  left: -999999px;

  &:focus {
    + span::before {
      outline: auto 5px -webkit-focus-ring-color;
    }
  }

  &:checked {
    + span::before {
      border: 3px solid palette(teal);
    }
  }

  + span {
    display: flex;
    align-items: center;

    &::before {
      content: '';
      display: inline-block;
      width: .6666em;
      height: .6666em;
      border-radius: 50%;
      background: white;
      border: 1px solid lighten(#333, 10%);
      margin-right: .25em;
    }
  }
}

.step--2 {
  div {
    display: flex;
    margin-top: .5em;
  }

  label {
    display: flex;
    align-items: center;
    margin: 0;

    & + label {
      margin-left: 1em;
    }
  }

  span {
    margin-top: 0;
  }
}

.step--3 {
  label {
    display: flex;
  }

  input {
    font-size: 1em;
    border: none;
    border-bottom: 1px solid #333;
    margin-left: .5em;
    width: 1px;
    flex-grow: 1;
  }
}

.rsvp__count {
  margin-top: .5em;
}

[data-a11y-dialog-native] > :first-child {
  display: none;
}

dialog[open] {
  display: block;
}

.dialog-container[aria-hidden='true'] {
  display: none;
}

dialog {
  position: fixed;
  top: 0;
  bottom: 0;
  margin: auto;
  text-align: right;

  button {
    border: none;
    background: none;
    font-size: 2em;
    line-height: .5;
    font-family: 'Comfortaa', serif;
  }

  h1 {
    text-align: left;
  }
}

@keyframes border {
  0% {
    border-color: palette(blue);
  }
  20% {
    border-color: palette(teal);
  }
  40% {
    border-color: palette(yellow);
  }
  60% {
    border-color: palette(orange);
  }
  80% {
    border-color: palette(red);
  }
  100% {
    border-color: palette(blue);
  }
}

@keyframes bkgd {
  0% {
    background-color: palette(blue);
  }
  20% {
    background-color: palette(teal);
  }
  40% {
    background-color: palette(yellow);
  }
  60% {
    background-color: palette(orange);
  }
  80% {
    background-color: palette(red);
  }
  100% {
    background-color: palette(blue);
  }
}

.photos-collection {
  ol {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }

  figure {
    background-color: white;
    padding: 1em;
    box-shadow:
    0 6px 10px 0 rgba(0,0,0,0.14),
    0 1px 18px 0 rgba(0,0,0,0.12),
    0 3px 5px -1px rgba(0,0,0,0.2);
  }

  img {
    max-height: 50vw;
    margin: auto;
  }

  @media only screen and (max-width: 480px) {
    figure {
      margin-left: 5px;
      margin-right: 5px;

    }
  }

  @include breakpoint($two) {
    position: absolute;
    top: 0;
    left: 0;
    width: 33.3333vw;
    display: flex;
    flex-direction: column;

    img {
      width: 100%;
      transition: all .33s;
    }
  }
}

@keyframes rotate {
  0%    { transform: rotate(0deg); }
  100%  { transform: rotate(360deg); }
}

